<?xml version="1.0"?>
<package>
  <name>scanner</name>
  <version>0.0.0</version>
  <description>The scanner package</description>

  <maintainer email="eirik@todo.todo">eirik</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>


  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>


  </export>
</package>
